# scythe-spirit

./: Cargo.toml  Embed.toml  build.rs
.cargo/: config.toml
src/: main.rs
